# cdk-aws-templates-system

./: .gitignore  ACTUALIZACION_GITHUB.md  CORRECCION_VALIDACION_ESQUEMAS.md  GITHUB_CHECKLIST.md  GITHUB_SETUP.md  INSTALACION.md  INSTRUCCIONES_AWS_CDK.md  LICENSE  README.es.md  README.md  RESUMEN_GITHUB.md  RESUMEN_SOLUCION_CDK.md  SOLUCION_CDK_INSTALADO.md  SOLUCION_COMPLETA_CDK.md  fix_git_email.sh  generar_cdk.py  install.sh  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  setup.py  setup_github.sh
cdk-output/: app.py
cdk-output/docs/: architecture.html  architecture.md
cdk-output/stacks/: ejemplo_basico_stack.py
cdk_templates/: __init__.py  cli.py  config_loader.py  deployment_orchestrator.py  deployment_rules.py  documentation_generator.py  exceptions.py  logging_config.py  models.py  naming_service.py  resource_link_resolver.py  resource_registry.py  schema_validator.py  tagging_service.py  template_generator.py  validation_engine.py
cdk_templates/templates/: __init__.py  base.py  ec2_template.py  rds_template.py  s3_template.py  vpc_template.py
docs/: AWS_CDK_SETUP.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE.md  EC2_TEMPLATE_IMPLEMENTATION.md  GUIA_DE_INICIO.md  VALIDATION_ENGINE_USAGE.md
examples/: README.md  aplicacion-web-completa.yaml  ec2_example.py  ejemplo-basico.yaml  simple-vpc.yaml
schemas/: ec2.json  rds.json  s3.json  vpc.json
tests/: __init__.py
tests/integration/: __init__.py  test_complete_resource_templates.py  test_end_to_end.py  test_multi_stack_deployment.py
tests/property/: strategies.py  (+4 more)
(+27 files in other folders)
